[package]
name = "mleap-tensor"
version = "0.1.0"
authors = ["Hollin Wilkins <hollinrwilkins@gmail.com>"]

[dependencies]
clippy = {version = "*", optional = true}
num = "0.1"
rand = "0.3"

[dependencies.blas-sys]
version = "0.6.6"
default-features = false
features = ["accelerate"]

[features]
default = []

[profile.release]
debug = true

[profile.bench]
opt-level = 3
debug = true

